build: Fix build with clang -Werror

https://bugzilla.gnome.org/show_bug.cgi?id=755659